# tentaqles-plugin

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  HOW-TO.md  LICENSE  README.md  TENTAQLES_PLUGIN_ISSUES.md  pyproject.toml  settings.json
.claude-plugin/: marketplace.json  plugin.json
hooks/: hooks.json
scripts/: _path.py  bootstrap.py  compaction-cron.py  dashboard_server.py  file_history.py  identity-guard.py  knowledge-capture.py  memory-bridge.py  pattern-cron.py  pre-compact.py  session-end.py  session-preamble.py  snapshot-guard.py  snapshot.py  tq_env.sh  tq_run.sh
skills/add-client/: SKILL.md
skills/add-project/: SKILL.md
skills/build-graph/: SKILL.md
skills/client-settings/: SKILL.md
skills/compact-memory/: SKILL.md
skills/cross-patterns/: SKILL.md
skills/dashboard/: SKILL.md
skills/decision-history/: SKILL.md
skills/emit-signal/: SKILL.md
skills/file-history/: SKILL.md
skills/profile-refresh/: SKILL.md
skills/query-memory/: SKILL.md
skills/rollback/: SKILL.md
skills/session-wrap/: SKILL.md
skills/setup-demo/: SKILL.md
skills/switch-client/: SKILL.md
skills/workspace-status/: SKILL.md
tentaqles/: __init__.py  cli.py  config.py  privacy.py  skills.py  threads.py
tentaqles/dashboard/: __init__.py  html.py  server.py  snapshot.py  sse.py
tests/: test_consolidator.py  test_contradiction.py  test_dashboard.py  test_decay.py  test_decision_lineage.py  test_integration_tier2.py  test_meta_signals_schema.py  test_migration_helper.py  test_pattern_detector.py  test_privacy.py  test_profiler.py  test_query_helpers.py  test_semantic_facts.py  test_signals.py  test_skills.py  test_snapshot_guard.py  test_snapshots.py  test_store.py  test_threads.py  test_tier2_schema.py
(+43 files in other folders)
