[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "tentaqles"
version = "0.1.0"
description = "Multi-workspace orchestration for AI coding assistants"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "pathspec",
    "fastembed",
    "numpy",
]

[project.optional-dependencies]
graphify = ["graphifyy"]

[project.scripts]
tentaqles = "tentaqles.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["tentaqles*"]
